Fixed spacing around brand in navbar

--- a/manymiles/static/css/style.css
+++ b/manymiles/static/css/style.css
@@ -29,6 +29,7 @@ nav ul {
 
 nav ul li:first-child {
     /* First child is typically the logo */
+    padding-left: 0;
     margin-right: auto;
 }
 
